--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,21 +10,16 @@ jobs:
 
     strategy:
       matrix:
-        php: [ 8.0, 8.1, rc ]
-        include:
-          - php: '8.0'
-            coverage: true
+        php: [ 8.0, 8.1 ]
 
     runs-on: ubuntu-latest
 
     steps:
       - name: Setup PHP
-        if: matrix.coverage
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: mbstring
-          tools: composer, cs2pr
+          tools: composer
           coverage: pcov
 
       - uses: actions/checkout@v2
@@ -38,27 +33,19 @@ jobs:
       - name: Composer install
         run: composer install --no-progress --no-suggest --no-interaction --prefer-dist --optimize-autoloader
 
-      - name: Enable code coverage
-        if: matrix.coverage
-        run: echo "COVERAGE=1" >> $GITHUB_ENV
-
-      - name: PHPUnit
+      - name: Run PHPUnit
         run: |
-          mkdir -p build/logs/phpunit
-          if [ "$COVERAGE" = '1' ]; then
-            vendor/bin/phpunit --coverage-clover build/logs/phpunit/clover.xml --log-junit build/logs/phpunit/junit.xml --colors=always
+          if [[ "$php" == 8.1 ]]; then
+            php vendor/bin/phpunit --coverage-clover coverage.xml
           else
-            vendor/bin/phpunit --log-junit build/logs/phpunit/junit.xml --colors=always
+             php vendor/bin/phpunit
           fi
+        env:
+          php: ${{ matrix.php }}
 
-      - name: Upload coverage results to Codecov
-        if: matrix.coverage
-        uses: codecov/codecov-action@v1
-        with:
-          name: phpunit-php${{ matrix.php }}
-          flags: phpunit
-          fail_ci_if_error: true
-        continue-on-error: true
+      - name: Upload code coverage
+        run: bash <(curl -s https://codecov.io/bash)
+        if: matrix.php == 8.1
 
   static-analysis:
     name: "Static Analysis"
